Error.output
Grammar

    0 $accept: error_object $end

    1 error_object: SCAN_ERROR '{' contents '}' ';'

    2 contents: description

    3 description: code message
    4            | code

    5 code: SCAN_CODE '=' SCAN_INT ';'

    6 @1: /* empty */

    7 message: SCAN_MSG '=' SCAN_STR @1 ';'


Terminals, with rules where they appear

$end (0) 0
';' (59) 1 5 7
'=' (61) 5 7
'{' (123) 1
'}' (125) 1
error (256)
SCAN_INT (258) 5
SCAN_STR (259) 7
SCAN_ERROR (260) 1
SCAN_CODE (261) 5
SCAN_MSG (262) 7


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
error_object (13)
    on left: 1, on right: 0
contents (14)
    on left: 2, on right: 1
description (15)
    on left: 3 4, on right: 2
code (16)
    on left: 5, on right: 3 4
message (17)
    on left: 7, on right: 3
@1 (18)
    on left: 6, on right: 7


state 0

    0 $accept: . error_object $end

    SCAN_ERROR  shift, and go to state 1

    error_object  go to state 2


state 1

    1 error_object: SCAN_ERROR . '{' contents '}' ';'

    '{'  shift, and go to state 3


state 2

    0 $accept: error_object . $end

    $end  shift, and go to state 4


state 3

    1 error_object: SCAN_ERROR '{' . contents '}' ';'

    SCAN_CODE  shift, and go to state 5

    contents     go to state 6
    description  go to state 7
    code         go to state 8


state 4

    0 $accept: error_object $end .

    $default  accept


state 5

    5 code: SCAN_CODE . '=' SCAN_INT ';'

    '='  shift, and go to state 9


state 6

    1 error_object: SCAN_ERROR '{' contents . '}' ';'

    '}'  shift, and go to state 10


state 7

    2 contents: description .

    $default  reduce using rule 2 (contents)


state 8

    3 description: code . message
    4            | code .

    SCAN_MSG  shift, and go to state 11

    $default  reduce using rule 4 (description)

    message  go to state 12


state 9

    5 code: SCAN_CODE '=' . SCAN_INT ';'

    SCAN_INT  shift, and go to state 13


state 10

    1 error_object: SCAN_ERROR '{' contents '}' . ';'

    ';'  shift, and go to state 14


state 11

    7 message: SCAN_MSG . '=' SCAN_STR @1 ';'

    '='  shift, and go to state 15


state 12

    3 description: code message .

    $default  reduce using rule 3 (description)


state 13

    5 code: SCAN_CODE '=' SCAN_INT . ';'

    ';'  shift, and go to state 16


state 14

    1 error_object: SCAN_ERROR '{' contents '}' ';' .

    $default  reduce using rule 1 (error_object)


state 15

    7 message: SCAN_MSG '=' . SCAN_STR @1 ';'

    SCAN_STR  shift, and go to state 17


state 16

    5 code: SCAN_CODE '=' SCAN_INT ';' .

    $default  reduce using rule 5 (code)


state 17

    7 message: SCAN_MSG '=' SCAN_STR . @1 ';'

    $default  reduce using rule 6 (@1)

    @1  go to state 18


state 18

    7 message: SCAN_MSG '=' SCAN_STR @1 . ';'

    ';'  shift, and go to state 19


state 19

    7 message: SCAN_MSG '=' SCAN_STR @1 ';' .

    $default  reduce using rule 7 (message)
